tests/integrations/json-basic/tests/actual_tests/foomp.rs
use json_basic::add;

fn main() {
    //
    add("42", 3);
    //~^ ERROR: mismatched types
}
